# erd_converter

./: .gitignore  main.py  pyproject.toml
erd_converter/base/: __init__.py  base_field.py  base_table.py  field.py  table.py
erd_converter/peewee/: field.py  table.py  utils.py
erd_converter/uml/: field.py  iterator.py  table.py  utils.py
tests/: experiment.dbml  test_field.py  test_iterator.py  test_table.py
tests/test_uml/: test_field.py  test_utils.py
