[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "erd-converter"
requires-python = ">= 3.8"
description = "This is project"
readme = "README.md"
dynamic = ["version"]
authors = [
  {name = "Dmitriy Zanadvornykh", email = "zandmitrij@gmail.com"},
]
keywords = ["python", "erd", "postgres", "peewee", "orm", "diagram"]


[project.optional-dependencies]
cli = [
    "typer==0.9.0",
]
dev = [
    "pytest",
    "mypy",
    "black",
    "ruff",
]